# meikaiwebsite

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml
ai-service/: .dockerignore  .env.full.example  .env.prod.example  Dockerfile  README.md  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/graphs/: __init__.py  router.py  slots.py  state.py  subgraphs.py
ai-service/app/guardrails/: quote_sanity.py
ai-service/app/infra/: checkpointer.py  embedding.py  llm_client.py  ocr.py  qdrant_client.py  reranker.py  tokenizer.py
ai-service/app/tools/: quote.py  rag.py
ai-service/archive/: DESIGN.md.bak.20260601  README.md  WORKLOG_2026-05-30.md  WORKLOG_2026-06-07.md  WORKLOG_2026-06-08.md  WORKLOG_2026-06-10.md  WORKLOG_2026-06-16.md  env.dev-deprecated.example  question.txt
ai-service/etl/: aggregate.py  build_index.py  extract_area.py  extract_dict.py  extract_space_breakdown.py  label_rule_based.py  label_with_llm.py  parse_quotes.py
ai-service/evals/: __init__.py  cases.yaml  scorer.py
ai-service/knowledge/dict/: decoration_terms.txt  intent_keywords.txt
ai-service/knowledge/faq_corpus/: README.md
ai-service/knowledge/few_shots/: README.md
ai-service/knowledge/personas/: office.md  residential.md  storefront.md
ai-service/knowledge/question_bank/: office.yaml  residential.yaml  storefront.yaml
ai-service/schemas/: __init__.py  office_slots.py  residential_slots.py  storefront_slots.py
ai-service/tests/: conftest.py  test_multi_turn.py  test_quote_sanity.py  test_quote_tools.py  test_rag.py  test_slots.py  test_subgraphs_quote.py
ai-service/tests/integration/: test_mysql_checkpointer.py
backend/: .env.example  .gitignore  Dockerfile  package.json  pnpm-lock.yaml
backend/data/: meikai.sqlite-shm  meikai.sqlite-wal
backend/src/: app.ts  index.ts
backend/src/config/: env.ts
backend/src/controllers/: leadsController.ts
backend/src/db/: connection.ts  migrate.ts
backend/src/middleware/: asyncHandler.ts  errorHandler.ts
deploy/: .gitignore  AI_SERVICE_DEPLOY.md  TENCENT_CLOUD.md  certbot-renew.crontab.example  docker-compose.prod.yml  edge.http.conf  edge.local.conf  edge.ssl.conf  env.prod.example  init-letsencrypt.sh  install-certbot-cron.sh  install-cron-from-local.sh  renew-cert.sh
frontend/: .dockerignore  .env.example  Dockerfile  env.d.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.vue  main.ts
(+56 files in other folders)
