[project]
name = "meikai-ai-service"
version = "0.1.0"
description = "美恺装饰 AI 客服与智能报价系统 — FastAPI + LangGraph"
requires-python = ">=3.12,<3.13"
readme = "DESIGN.md"

# DESIGN.md §13 已锁定的核心依赖。Sprint 推进时按需追加,不要提前装。
dependencies = [
  # Web / 流式
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.12",     # 文件上传

  # 校验 / 配置
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",

  # LangGraph 栈
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "langgraph-checkpoint-mysql>=2.0",   # 社区包,版本锁死(DESIGN §13.1)
  "aiomysql>=0.2",

  # 向量检索
  "qdrant-client>=1.12",

  # ETL
  "pandas>=2.2",
  "openpyxl>=3.1",
  "xlrd>=2.0",                        # 老 .xls 必需

  # 文件安全
  "python-magic>=0.4",                # 文件类型嗅探(DESIGN §10 表第 3 项)

  # 重试 / 退避(DESIGN §10.1:所有 Provider 必须裹 tenacity)
  "tenacity>=9.0",

  # 中文分词(DESIGN §5.6.1:BM25 路径走 Jieba + 装修自定义词典)
  "jieba>=0.42",

  # 可观测
  "langfuse>=2.50",
]

[project.optional-dependencies]
# 仅在本地开发/Sprint 2 后期接入时安装,生产 ai-service 镜像不含
cad = [
  "ezdxf>=1.3",
  "pdfplumber>=0.11",
  "shapely>=2.0",
  "pdf2image>=1.17",
  "pikepdf>=9.0",
]
# DESIGN §2.2 完整版本地推理依赖:bge-m3 / bge-reranker / PaddleOCR
# 生产 2C4G 镜像不装(provider 走 API)
local = [
  "FlagEmbedding>=1.2",               # bge-m3 + bge-reranker-v2-m3
  "sentence-transformers>=3.0",       # FlagEmbedding 的隐式依赖
  "torch>=2.4",                       # CPU 版即可(M5 Mac 自动走 MPS)
  "paddleocr>=2.8",                   # 本地 OCR
  "paddlepaddle>=2.6",                # paddleocr 运行时
  "pillow>=10.0",                     # 图像 IO
  "numpy>=1.26",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Sprint 2 Phase A:集成测试默认跳过,显式 `pytest -m integration` 触发
# WHY 默认跳过而非默认跑:本地/CI 没起 docker mysql 时 65 项单测仍应秒过;
#     集成测试需 `docker compose up -d mysql`,作为显式动作触发
markers = [
    "integration: 需要真实 MySQL/Qdrant — 默认跳过,显式 `pytest -m integration` 触发",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 项目名 meikai-ai-service ≠ 包目录名 app,需显式告知 hatchling 打包入口
packages = ["app"]
